Fix subject wrapping

--- a/assets/styles/main/summary.sass
+++ b/assets/styles/main/summary.sass
@@ -32,19 +32,21 @@
     color: #6c878e
     font-size: 16px
     max-width: 300px
-    display: inline-block
     margin-top: 10px
     overflow: hidden
     white-space: nowrap
+    float: left
 
   .subject
-    display: inline-block
     font-size: 15px
     color: #6c878e
     margin-top: 10px
     overflow: hidden
     margin-right: 2px
     line-height: 20px
+    word-wrap: break-word
+    padding-left: 0.55em
+    text-indent: -0.55em
 
   .body
     max-height: 63px
